spacing corrections of gallery and team sections

--- a/app/styles/scss/sections/_section-portfolio.scss
+++ b/app/styles/scss/sections/_section-portfolio.scss
@@ -6,7 +6,10 @@
 		flex-wrap: wrap;
 		justify-content: flex-start;
 		align-items: flex-start;
-		margin:-1rem 0 1.5rem;
+		margin:0 0 1.5rem;
+		@include media-min($tablet) {
+			margin:0 (-$gallerySpacing) 1.5rem;
+		}
 	}
 	&__container-left {
 		flex-basis: 50%;
@@ -25,7 +28,7 @@
 		display: block;
 		padding: 0.5rem;
 		@include media-min($tablet) {
-			padding: 1rem;
+			padding: $gallerySpacing;
 		}
 		width:100%;
 		&--big {
@@ -38,7 +41,7 @@
 }
 
 .text--portfolio {
-	margin-bottom:4.25rem;
+	margin-bottom:3.75rem;
 	@include media-min($notebook) {
 		width: 48%;
 		margin-left: auto;
